--- a/nowchat/public/index.html
+++ b/nowchat/public/index.html
@@ -73,8 +73,7 @@
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="http://nowchat-y57y645t.dotcloud.com/nowjs/now.js"></script>
-    <script src="http://localhost:3000/nowjs/now.js"></script>
+    <script src="/nowjs/now.js"></script>
 
     <script>
         var _alpha = 'qwertyuiopasdfghjklzxcvbnm1234567890'
