--- a/nowchat/public/index.html
+++ b/nowchat/public/index.html
@@ -109,9 +109,9 @@
             now.displayHistory = function(hist) {
                 if (! (hist && hist.length)) return;
                 var n = hist.length - 1
-                while (n--) {
+                do {
                     _display(hist[n].author, hist[n].msg)
-                }
+                } while(--n)
             }
 
 
