--- a/nowchat/public/index.html
+++ b/nowchat/public/index.html
@@ -108,7 +108,7 @@
 
             now.displayHistory = function(hist) {
                 if (! (hist && hist.length)) return;
-                var n = hist.length - 1
+                var n = hist.length 
                 do {
                     _display(hist[n].author, hist[n].msg)
                 } while(--n)
