--- a/nowchat/public/index.html
+++ b/nowchat/public/index.html
@@ -20,6 +20,10 @@
             margin-left:    300px;
         }
 
+        #log {
+            overflow:   hidden;
+        }
+
         #log > div {
             padding:        0.25em 0;
             border-bottom:  1px dotted #ccc;
@@ -101,7 +105,7 @@
                                 .replace('$', msg)
                                 .replace('#', name)
 
-                $('#log').append(html)
+                $('#log').append(html).animate({scrollTop: $('#log').height()})
             }
 
             now.displayMsg = _display
